--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 ---
-layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+layout: page
+title: Bao (Billy) Do
+subtitle: National Yunlin University of Science and Technology
 ---
+
+<br/>
+
+## About me
+
+I am a Research Associate at Computational Biology Department, School of Computer Science, Carnegie Mellon University, advised by Prof. [Chang Kuei-Chung](https://iai.yuntech.edu.tw/academic_staff/changkc) and Prof. [Bo Hsiao] (https://www.mis.yuntech.edu.tw/?page_id=26336).  
+
+
+<!-- My research interests broadly lie in **AI for Healthcare**, at the intersection of machine learning **(ML)**, computer vision **(CV)**, and medical image computing **(MIC)** including: -->
+<!-- * **(ML&CV)** Learning with Imperfect & Limited Annotation: Label Scarcity, Domain Shift, Imbalanced Subpopulation Distribution, Unsupervised and Representation learning, Uncertainty Quantification.
+* Fundamental **(MIC)**: Medical Image Segmentation/Reconstruction/Registration, Foundation Models in Medical Imaging, Learning with Multi-modality data, Integration of Imaging and Clinical data. -->
+
+Feel free to reach out! I enjoy connecting and discussing ideas across a wide range of topics. I’m always open to collaboration, so don’t hesitate to get in touch if you’re excited about these areas and interested in working together.
+
+## News
+
+
+## Contact
+
+```
+Email: baogiado1305@gmail.com
+```
