--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 layout: page
 title: Bao (Billy) Do
 subtitle: National Yunlin University of Science and Technology
+cover-img: /assets/img/YunTech_Background.jpeg
 ---
 
 <br/>
 
 ## About me
 
-I am a Research Associate at Computational Biology Department, School of Computer Science, Carnegie Mellon University, advised by Prof. [Chang Kuei-Chung](https://iai.yuntech.edu.tw/academic_staff/changkc) and Prof. [Bo Hsiao] (https://www.mis.yuntech.edu.tw/?page_id=26336).  
+Hi! I am from Vietnam. Currently, I am a first-year Master student at International Graduate School of Artficial Intelligence, National Yunlin University of Science and Technology (YunTech), fortunate to be under the joint supervision of Prof. [Chang Kuei-Chung](https://iai.yuntech.edu.tw/academic_staff/changkc) and Prof. [Bo Hsiao] (https://www.mis.yuntech.edu.tw/?page_id=26336).  
 
+Previously, I graduated in Information Technology from University of Information Technology - Vietnam National University Ho Chi Minh City (UIT - VNUHCM), where I excelled in the High Quality Program in Information Technology (Japanese-oriented).
 
-<!-- My research interests broadly lie in **AI for Healthcare**, at the intersection of machine learning **(ML)**, computer vision **(CV)**, and medical image computing **(MIC)** including: -->
-<!-- * **(ML&CV)** Learning with Imperfect & Limited Annotation: Label Scarcity, Domain Shift, Imbalanced Subpopulation Distribution, Unsupervised and Representation learning, Uncertainty Quantification.
-* Fundamental **(MIC)**: Medical Image Segmentation/Reconstruction/Registration, Foundation Models in Medical Imaging, Learning with Multi-modality data, Integration of Imaging and Clinical data. -->
+My research interests broadly lie in **Management Information System**, at the intersection of machine learnin **(ML)**, natural language processing **(NLP)**, and information system **(IS)** including:
+* **(ML&CV)** Learning with Imperfect & Limited Annotation: Label Scarcity, Domain Shift, Imbalanced Subpopulation Distribution, Unsupervised and Representation learning, Uncertainty Quantification.
+* Fundamental **(MIC)**: Medical Image Segmentation/Reconstruction/Registration, Foundation Models in Medical Imaging, Learning with Multi-modality data, Integration of Imaging and Clinical data.
 
 Feel free to reach out! I enjoy connecting and discussing ideas across a wide range of topics. I’m always open to collaboration, so don’t hesitate to get in touch if you’re excited about these areas and interested in working together.
 
@@ -25,3 +27,4 @@ Feel free to reach out! I enjoy connecting and discussing ideas across a wide ra
 ```
 Email: baogiado1305@gmail.com
 ```
+
