--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Bao (Billy) Do
 subtitle: National Yunlin University of Science and Technology
-cover-img: /assets/img/YunTech_Background.jpeg
+cover-img: /assets/img/YunTech_bg.jpeg
 ---
 
 <br/>
