--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@ My research interests broadly lie in **Management Information System**, at the i
 Feel free to reach out! I enjoy connecting and discussing ideas across a wide range of topics. I’m always open to collaboration, so don’t hesitate to get in touch if you’re excited about these areas and interested in working together.
 
 ## News
+### **2025**
+* **(2025.11)**: Two papers accepted at **ICASSP 2026**!!! I will attend the conference in Barcelona, Spain! See you soon!
+* **(2025.10)**: Three papers accepted at **ISBI 2026**!!!
 
+### **2024**
+* **(2024.05)**: One paper accepted at **Neurocomputing (IF: 6.5)**! ["UP2D: Uncertainty-aware progressive pseudo-label denoising for source-free domain adaptive medical image segmentation"](https://www.sciencedirect.com/science/article/pii/S0925231226000561) 
+
+### **2023**
+* **(2023.10)**: One paper accepted at **Neurocomputing (IF: 6.5)**! ["UP2D: Uncertainty-aware progressive pseudo-label denoising for source-free domain adaptive medical image segmentation"](https://www.sciencedirect.com/science/article/pii/S0925231226000561) 
+
+### **2022**
+* **(2022.09)**: One paper accepted at **Neurocomputing (IF: 6.5)**! ["UP2D: Uncertainty-aware progressive pseudo-label denoising for source-free domain adaptive medical image segmentation"](https://www.sciencedirect.com/science/article/pii/S0925231226000561) 
 
 ## Contact
 
